# ADEPT

./: CMakeLists.txt
adept/: CMakeLists.txt  driver.cpp  driver.hpp
examples/asynch_protein/: CMakeLists.txt  asynch_protein.cpp
examples/asynch_sw/: CMakeLists.txt  asynch_sw.cpp
examples/multi_gpu/: CMakeLists.txt  multi_gpu.cpp
examples/multigpu_protein/: CMakeLists.txt
examples/multigpu_protein_scoreonly/: CMakeLists.txt
examples/py_examples/: CMakeLists.txt
examples/simple_sw/: CMakeLists.txt  simple_sw.cpp
